# sagerender

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check-version.yaml  docker-build.yaml  python-build.yaml  python-test.yaml
examples/complex/: README.md  common.yaml  hiera.yaml
examples/complex/algorithm/: catboost.yaml  tensorflow.yaml  xgboost.yaml
examples/complex/environment/: dev.yaml  prod.yaml
examples/simple/: README.md  common.yaml  hiera.yaml
examples/simple/environment/: dev.yaml  prod.yaml  test.yaml
notebook/: getting-started.ipynb
sagerender/: __init__.py  defaults.py  exceptions.py
sagerender/builder/: blueprint.py  pipeline.py  step.py
sagerender/cli/: commands.py  run_pipeline.py  upsert_pipeline.py  version.py
sagerender/utilities/: __init__.py  common.py  mixin.py
tests/: conftest.py
tests/config/: missing_context_hiera.yaml  missing_datadir_hiera.yaml  test_pipeline.yaml  test_pipeline_builder.yaml  test_steps.yaml
tests/sagerender/builder/: test_blueprint.py  test_pipeline.py  test_step.py
tests/sagerender/cli/: test_run_pipeline.py  test_upsert_pipeline.py
tests/sagerender/utilities/: test_common.py  test_mixin.py
